# agent-missions-hub

./: .gitignore  AGENTS.md  APPROVALS.md  README.md  alembic.ini  auto_gate_rules.yaml  codexcli_git_ops_policy.md  package.json  preview.sql  pyproject.toml  ty.toml  作業方法.md  監査・テスト方法.md
.github/workflows/: ci.yml  fetch.yml  nightly.yml  release.yml
apps/orchestrator-ui/: jest.config.js  jest.setup.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo
apps/orchestrator-ui/__tests__/: dashboard.test.tsx  manager.test.tsx
apps/orchestrator-ui/app/: globals.css  head.tsx  layout.tsx  page.tsx
apps/orchestrator-ui/app/artifacts/[id]/: page.tsx
apps/orchestrator-ui/app/codex/instances/: page.tsx
apps/orchestrator-ui/app/components/: page.tsx
apps/orchestrator-ui/app/forms/basic/: page.tsx
apps/orchestrator-ui/app/mail/manager/: page.tsx
apps/orchestrator-ui/app/missions/: page.tsx
apps/orchestrator-ui/app/missions/[id]/: page.tsx
apps/orchestrator-ui/app/plan/: page.tsx
apps/orchestrator-ui/app/release/: page.tsx
apps/orchestrator-ui/app/review/: page.tsx
apps/orchestrator-ui/app/settings/: page.tsx
apps/orchestrator-ui/app/test/: page.tsx
apps/orchestrator-ui/app/utils/: sse.ts
apps/orchestrator-ui/components/: ContextDrawer.tsx  FooterStatus.tsx  NavPhase.tsx
apps/orchestrator-ui/components/ui/: badge.tsx  button.tsx  card.tsx
apps/orchestrator-ui/e2e/: dashboard.spec.ts  manager.spec.ts
apps/orchestrator-ui/locales/: manager.en.json  manager.ja.json
artifacts/: overview.html
artifacts/ui_audit/: .last-run.json  axe_result.json  axe_violations.json  report.html  summary.json
artifacts/ui_audit/manager-Manager-UI-Audit-Missions-List-Page/: error-context.md
config/: engines.yaml  roles.json
data/logs/current/audit/: 20251120_codex_report.md  dangerous_command_events.jsonl  mission_model_20251120.txt
data/logs/current/audit/workflow_runs/: workflow_run_108add10-5af1-4a2c-835e-2f4f187ba129.jsonl  (+22 more)
docs/: UI_AUDIT_GUIDE.md  multi_agent_terminal_checklist_v2.md  multi_agent_terminal_milestones_v2.md  safeops_multi_agent_rules.md
docs/legacy/: multi_agent_terminal_checklist_v2.md  multi_agent_terminal_milestones_v2.md
docs/legacy/observability/: runbook_v1.md
docs/legacy/operations/: AGENT_ONBOARDING.md  handover_recovery_checklist.md  llama_server_runbook.md  mail_lightning_audit_procedure.md  root_structure_filerule.md
docs/legacy/plans/: agent_registration_ui_plan.md  coverage_improvement_plan_v1.md  mvp_detailed_technical_design.md  mvp_implementation_plan.md  mvp_technical_design.md  project_idea_and_guide.md
docs/operations/: git_access_notes.md  handover_recovery_checklist.md  shadow_audit_signing.md
docs/plans/: agent_missions_hub_design_v2.md  bootstrap.md  cli_multi_agent_orchestrator_v1_guide.md  cli_orchestrator_design.md  legacy_assets.md  mission_control_plan.md  mvp_detailed_technical_design.md
legacy/scripts/: runner.py  ui_audit_run.py
legacy/ui/templates/: error.html  mail_project.html  mail_unified_inbox.html
migrations/: env.py
migrations/versions/: 25d1f3a8b32f_knowledge_metadata.py  84eef2bb1c4f_mission_workflow_schema.py  f3b0b0c96c12_phase2a_indexes.py
notes/: agent_md.md
notes/scripts/: test_api_smoke.py
notes/scripts/legacy/: minimal_playwright_audit.py  nightly_ui_audit.py  normalize_eol.py  runner.py  scan_secrets.py  ui_audit_run.py  update_coverage_and_evidence.py  verify_ui_gate_assets.py
notes/ui/: base.html
observability/coverage/ui/: cobertura-coverage.xml  coverage-final.json  lcov.info
observability/coverage/ui/lcov-report/: index.html
observability/legacy/policy/: REPORT_DRAFT_M4.md  check_eol_report_current.txt  safeops_kpi.json
observability/policy/: ci_evidence.jsonl  ci_evidence.sample.jsonl  sbom.json  sbom_run.jsonl  ui_gate_run.jsonl
plans/: diff-plan.json  plan_diff.json
reports/test/: coverage_storage_cov.txt  diff_cover_storage_cov.txt  npm_orchestrator_ui.txt  pytest_phase2a_run.txt  pytest_phase2a_storage_run.txt  pytest_phase2b_run.txt  ruff_phase2a_run.txt  ui_audit_run.txt
rules/: AGENTS.md  APPROVALS.md  project_rules.md  project_rules.yaml
rules/agent/: AUDIT_rules.yaml  Agent Spec.yaml  CMD.yaml  Design-UI.yaml  MCP-Orchestrator.yaml  WORK_rules.yaml  Web-Verify.yaml  mcp_policy.yaml
rules/prompts/: AUDIT-監査結果提示プロンプト .txt  AUDIT-監査結果提示プロンプト.txt  WORK-実行結果提示プロンプト.txt
scripts/: Invoke-WithShadowAudit.ps1  auto_gate_decider.py  shadow_audit_emit.py  test_api_smoke.py  test_workflow_engine_wrapper.py  ui_audit_placeholder.sh  ui_audit_run.py  verify_schema.py
scripts/ops/: verify_ui_gate_assets.py
src/agent_missions_hub/: __init__.py  db.py  http.py  mcp.py  settings.py
src/agent_missions_hub/models/: __init__.py  domain.py
src/mcp_agent_mail/: __init__.py  app.py  config.py  db.py  http.py  mail_client.py  models.py  storage.py  utils.py  workflow_engine.py
src/mcp_agent_mail/routers/: __init__.py  missions.py
src/mcp_agent_mail/static/: tw-fallback.css
src/mcp_agent_mail/templates/: base.html  mail_inbox.html  mail_index.html  overseer_compose.html
src/orchestrator/: __init__.py  cli.py  conpty_stream.py  conpty_wrapper.py  message_bus.py  safeops.py
tests/: conftest.py  http_transport_mocks.py  test_chat_attach.py  test_cli_e2e.py  test_conftest_cov.py  test_conpty_stream.py  test_conpty_wrapper.py  test_http_liveness_min.py  test_mail_client_smoke.py  test_message_bus.py  test_missions_api.py  test_missions_api_negative.py  test_orchestrator_cli_parallel.py  test_orchestrator_cli_run.py  test_safeops_helper.py  test_shadow_audit.py  test_shadow_audit_pshook.py  test_signals_api.py  test_smoke_placeholder.py  test_storage_cov.py  test_ui_gate.py  test_workflow_engine.py
(+10 files in other folders)
