[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-missions-hub"
version = "0.0.1"
description = "Mission/Task/Artifact/Knowledge centric multi-agent hub"
readme = "README.md"
authors = [{ name = "minorumochizuki2015-ship-it" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "fastmcp>=0.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "python-decouple>=3.8",
    "filelock>=3.14",
    "gitpython>=3.1",
    "pillow>=10.2",
    "markdown2>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "black>=24.8",
    "isort>=5.13",
    "mypy>=1.11",
]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PGH"]
ignore = ["B008"]

[tool.ruff.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
